# cpc-jank-db

./: README.md  db.py  example.env  fetcher.py  html.py  io_stuff.py  models.py  pre_html.py  pyproject.toml  requirements.txt  results.py  results_parser.py  ssh-tunnel.sh  tox.ini  utils.py
cpc_jank_db/: __init__.py  db.py  jenkins.py  models.py  naming.py  utils.py
cpc_jank_db/data_analysis/: filters.py  job_run_results.py  test_failures.py
src/: __main__.py
src/aws/: __init__.py
src/io/: __init__.py
templates/: failure-dropdown.html  index.html  other.html  style.css  table-row.html
